fixed menu drop down alignment & renamed file api helper

--- a/octoprint_Printrhub/static/css/printrbar.css
+++ b/octoprint_Printrhub/static/css/printrbar.css
@@ -23,7 +23,8 @@
   display: inline-block;
   */
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: flex-end;
 
   font-size: 0.6em;
 }
@@ -31,7 +32,7 @@
 #printrbar_dropdown-menu {
   position: absolute;
   z-index: 1; /* Sit on top */
-  transform: translate(0px, 30px); /* shift it down and to the left */
+  transform: translate(-20px, 30px); /* shift it down and to the left */
   display: none;
   text-align: right;
   flex-direction: column;
